tests/invalid_typecheck/test_tc_while_int_condition.aphi
/*
Type-check error: Condition of 'while' must be bool, but 'n' has type int.
Uses an int variable as the while condition.
*/

int n;

procedure main {
    n = 10;
    while (n) {
        n = n - 1;
    }
}
